# WebLeaf

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  test.yml
notebooks/: README.md  WebLeafData.ipynb  WebLeafDataExploration.ipynb  WebLeafDataExport.ipynb  WebLeafDataValidation.ipynb  WebLeafModel.ipynb  WebLeafValidation.ipynb
tests/: example.html  test_leaf.py  test_tree.py  test_web_leaf.py
webleaf/: Branch.py  Bundle.py  ColumnLabeler.py  Leaf.py  LeafPile.py  Neighbour.py  Tree.py  Web.py  __init__.py  bfs_utils.py
webleaf/model/: TagModel.py  TextModel.py  WebGraphAutoEncoder.py  product_page_model_4_80.torch  tag_embeddings.torch
